slides/Containers_Platform/code/microservices-deployment.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: shipping
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
      - image: rawmind/web-shipping:0.1-0
        name: shipping
        ports:
        - containerPort: 8080
          protocol: TCP
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: payments
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - image: rawmind/web-payments:0.1-3
        name: payments
        ports:
        - containerPort: 8080
          protocol: TCP
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: inventory
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - image: rawmind/web-inventory:0.1-0
        name: inventory
        ports:
        - containerPort: 8080
          protocol: TCP
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: gateway
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - image: rawmind/web-gateway:0.1-3
        name: gateway
        ports:
        - containerPort: 8080
          protocol: TCP
