slides/Containers_Platform/code/microservices-svc-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: shipping
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  labels:
    app: payments
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: payments
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: inventory
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gateway
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-http
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: gateway
          servicePort: 8080
